--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,12 @@ android {
             path "CMakeLists.txt"
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
 }
 
 dependencies {
