--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="app.chen.com.fulleditnote" >
+    package="com.chen.app" >
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
@@ -8,13 +8,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name="com.chen.fulleditnote.app.activity.MainActivity" >
+        <activity android:name="com.chen.app.activity.MainActivity" ></activity>
+        <activity android:name="com.chen.app.activity.NoteListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.chen.fulleditnote.util.PermissionUtilActivity"></activity>
+        <activity android:name="com.chen.app.util.PermissionUtilActivity"/>
     </application>
 
 </manifest>
