--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,15 @@
         android:theme="@style/AppTheme" >
         <activity android:name="com.chen.app.activity.MainActivity" ></activity>
         <activity android:name="com.chen.app.activity.NoteListActivity">
+
+        </activity>
+        <activity android:name="com.chen.app.util.PermissionUtilActivity"/>
+        <activity android:name="com.daimajia.swipedemo.ListViewExample">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.chen.app.util.PermissionUtilActivity"/>
     </application>
 
 </manifest>
