--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name="com.chen.app.activity.MainActivity" ></activity>
+        <activity android:name="com.chen.app.activity.EditActivity" ></activity>
         <activity android:name="com.chen.app.activity.NoteListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
